test/error/parse/ExpectExpression.mod
MODULE ExpectExpression;
PROCEDURE P;
BEGIN
  RETURN ;
END P;
END ExpectExpression.
